adicionado scripts e politica de cookies

--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -5,11 +5,11 @@
       <div class="container col-xxl-8 px-5 pb-5 pt-5 mt-5">
         <div class="row flex-lg-row-reverse align-items-top justify-content-center g-0 py-1">
           
-          <div class="col-lg-8 mb-3 d-flex flex-column align-items-center" data-anima="esquerda">
+          <div class="col-lg-8 my-5 d-flex flex-column align-items-center" data-anima="esquerda">
             
-            <img src="./images/logo/logo.png" class="d-block mx-lg-auto img-fluid pb-3" alt="Monica Costa" width="50%" height="" loading="lazy">
+            <!-- <img src="./images/logo/logo.png" class="d-block mx-lg-auto img-fluid pb-3" alt="Monica Costa" width="50%" height="" loading="lazy"> -->
             
-            <p class="lead display-6 py-3 text-center">
+            <p class="lead display-6 my-3 mb-lg-5 text-center">
               Como deseja fazer contato?
             </p>
            
