--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,12 +2,12 @@
       <!-- end header section -->
       
       <!-- hero section -->
-      <div class="container col-xxl-8 px-5 pb-5 pt-5 mt-5">
+      <div class="container col-xxl-8 px-5 py-5 mt-5">
         <div class="row flex-lg-row-reverse align-items-top justify-content-end g-0 py-1">
-          <div class="col-10 col-sm-8 col-lg-6 my-2" data-anima="direita">
-            <img src="./images/monica_sem_fundo_2.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
+          <div class="col-10 col-sm-8 col-lg-5 my-2" data-anima="direita">
+            <img src="./images/monica_sem_fundo_2.png" class="d-block img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
           </div>
-          <div class="col-lg-6 my-3 pt-lg-4" data-anima="esquerda">
+          <div class="col-lg-6 my-3 pt-lg-5" data-anima="esquerda">
             
             <img src="./images/logo/logo_nome.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
             
@@ -507,7 +507,7 @@
 						</a>
 
 					<div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushMyFAQ1">
-						<div class="accordion-body" editable="rich"><p>Este modelo visa tornar mais fácil para as pessoas se conscientizarem de seus padrões mentais disfuncionais. É a abordagem mais difundida atualmente e a que possui maior número de estudos comprovando sua eficácia em diferentes condições psicológicas. Um estudo publicado na revista <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5797481/" target="_blank">Frontiers in Psychology</a> descreve-o como a primeira opção para transtornos mentais comuns.</p></div>
+						<div class="accordion-body" editable="rich"><p>Ela se baseia na idéia de que <strong>pensamentos, emoções e comportamentos estão interligados</strong> e influenciam um ao outro. É a abordagem mais difundida atualmente e a que possui maior número de estudos comprovando sua eficácia em diferentes condições psicológicas. Um estudo publicado na revista <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5797481/" target="_blank">Frontiers in Psychology</a> descreve-o como a primeira opção para transtornos mentais comuns.</p></div>
 					</div>
 				</div>
 				
