--- a/views/tratamentos.ejs
+++ b/views/tratamentos.ejs
@@ -4,10 +4,11 @@
       <!-- hero section -->
       <div class="container col-xxl-8 px-5 pb-5 pt-5 mt-5">
         <div class="row flex-lg-row-reverse align-items-top justify-content-end g-0 py-1">
-          <div class="col-10 col-sm-8 col-lg-6 my-2" data-anima="direita">
-            <img src="./images/monica_sem_fundo_2.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
-          </div>
-          <div class="col-lg-6 my-3  pt-lg-5" data-anima="esquerda">
+			<div class="col-10 col-sm-8 col-lg-5 my-2" data-anima="direita">
+				<img src="./images/monica_sem_fundo_2.png" class="d-block img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
+			  </div>
+			  <div class="col-lg-6 my-3 pt-lg-5" data-anima="esquerda">
+	
             
             <img src="./images/logo/logo_nome.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
             <!-- <h4>
@@ -17,7 +18,7 @@
               Mônica Costa
             </h1> -->
             <p class="lead text-center pt-3">
-				Vamos tratar juntos os comportamentos, emoções ou pensamentos que te trazem sofrimento
+				Vamos tratar juntos os pensamentos, emoções e comportamentos que te trazem sofrimento
             </p>
             <!-- <div class="d-grid gap-2 d-md-flex justify-content-md-end">
               <button type="button" class="btn-lg px-4 me-md-2 botao-dourado" style="background-color:#000"::before>
@@ -56,7 +57,7 @@
 		  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 		</div>
 		<div class="modal-body">
-			<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+			<p class="lead">A ansiedade pode ser um transtorno debilitante e afetar significativamente a qualidade de vida do paciente. No entanto, com o tratamento adequado, é possível reduzir ou mesmo elimina-la e melhorar a qualidade de vida. Um dos principais componentes do TCC no tratamento da ansiedade é a cognitiva. Esse processo envolve uma <strong>identificação e mudança de pensamentos e pensamentos negativos</strong> que podem estar confiantes para a ansiedade do paciente. Por exemplo, um paciente com transtorno de ansiedade generalizada (TAG) pode ter pensamentos como "nunca serei capaz de lidar com todas as minhas responsabilidades" ou "sempre fico preocupado e nervoso, não importa o que eu faça". Esses pensamentos podem levar a um aumento da ansiedade e da preocupação, alimentando um ciclo vicioso que mantém o transtorno. Outro componente importante do TCC no tratamento da ansiedade é uma <strong>exposição gradual e sistemática.</strong> Esse processo envolve a exposição do paciente às situações temidas, de forma gradual e controlada, até que ele seja capaz de enfrentá-las sem sentir uma ansiedade excessiva.</p>
 		</div>
 		<div class="modal-footer">
 		  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
@@ -88,7 +89,8 @@
 			  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+				<p class="lead">A TCC se mostra como uma abordagem muito eficaz para tratar a depressão. Após a compreensão do desenvolvimento da depressão do paciente, é feita uma psicoeducação do modelo cognitivo e do transtorno.	Para a TCC o sujeito com depressão possui uma <strong>tríade cognitiva negativa</strong>, isto é, <strong>a visão de si, do mundo e do futuro é distorcida</strong>. Notam-se diversas distorções cognitivas, ou seja, erros sistemáticos na interpretação de si e do mundo. Assim, um dos focos da terapia é auxiliar o cliente a desenvolver uma visão menos disfuncional, mais verdadeira da realidade.
+					</p>
 			</div>
 			<div class="modal-footer">
 			  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
@@ -123,7 +125,7 @@
 			  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+				<p class="lead">O <strong>contracondicionamento</strong> é uma técnica fundamental na TCC para combater hábitos destrutivos, incluindo vícios. Seu objetivo é eliminar, substituir ou modificar os estímulos que desencadeiam o comportamento vicioso. O terapeuta e o paciente trabalham juntos para fazer mudanças nos estímulos anteriores à resposta, evitando a emissão do comportamento indesejado. É essencial que o paciente esteja motivado e comprometido com a mudança. São utilizadas ferramentas práticas e estratégias para enfrentar os vícios, promovendo mudanças cognitivas e comportamentais que auxiliam na recuperação.</p>
 			</div>
 			<div class="modal-footer">
 			  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
@@ -157,7 +159,7 @@
 			  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+				<p class="lead">Após uma pessoa ter sido vítima ou testemunha de eventos traumáticos, que podem variar desde violência extrema até situações de exclusão social e humilhação. As lembranças desses acontecimentos intensos tendem a ser revividas sempre que são relembradas, causando emoções negativas e ansiedade. Dependendo do gatilho, as crises podem ser frequentes ou espaçadas, afetando a qualidade de vida. Uma das principais vantagens do tratamento cognitivo-comportamental é que, devido às suas técnicas, ele tende a ter um efeito mais imediato no dia a dia do paciente. Como sua prioridade é a reeducação da pessoa e produzir melhorias no seu dia a dia, todo o seu trabalho é estruturado para maximizar resultados de curto prazo, pois isso facilita o resto do tratamento. Essa vertente também trabalha no longo prazo para reelaborar os pensamentos, fazendo com que todas essas mudanças sejam mais profundas e se mantenham após o fim do tratamento.</p>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
@@ -192,7 +194,7 @@
 			  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+				<p class="lead">As fobias são classificadas como Transtornos de Ansiedade. Elas se manifestam por meio de sintomas físicos e mentais, como preocupação extrema, angústia, medo desproporcional à ameaça real, alterações fisiológicas (como suor frio, tremores e palpitações) e problemas relacionados ao sono. Para ser considerada uma fobia, a condição deve impactar significativamente a vida do indivíduo, causando prejuízos profissionais, pessoais, sociais, financeiros ou de saúde. Os Principais tipos são a <strong>Fobia Social:</strong> caracterizada pelo Medo ou ansiedade acentuados diante de situações em que a pessoa é exposta à avaliação por terceiros e a <strong>Agorafobia:</strong> Manifesta-se como medo ou ansiedade desproporcionais ao perigo real apresentado pelas situações agorafóbicas e ao contexto sociocultural. A TCC utiliza técnicas como reestruturação cognitiva, exposição gradual e treinamento de habilidades sociais para tratar as fobias, proporcionando alívio e melhoria na qualidade de vida.</p>
 			</div>
 			<div class="modal-footer">
 			  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
@@ -210,21 +212,21 @@
 	<section class="container d-flex justify-content-center my-5 px-lg-5">
 		
 		<!-- Button trigger modal -->
-		<button type="button" class="btn border-none shadow w-100 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalDepressao" data-anima="baixo">
+		<button type="button" class="btn border-none shadow w-100 btn-modal-trat" data-bs-toggle="modal" data-bs-target="#modalTSono" data-anima="baixo">
 			<h1 class="position-absolute top-50 start-50 translate-middle display-5">TRANSTORNOS DO SONO</h1>
 			<img class="w-100 rounded opacity-50" src="./images/outono.jpg" sizes="" width="" height="" alt="Photo by Photographer Frederik Trovatten" loading="lazy">
 		</button>
 		  
 		  <!-- Modal -->
-		  <div class="modal fade" id="modalDepressao" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalDepressaoLabel" aria-hidden="true">
+		  <div class="modal fade" id="modalTSono" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalTSonoLabel" aria-hidden="true">
 			<div class="modal-dialog modal-dialog-centered">
 			  <div class="modal-content">
 				<div class="modal-header">
-				  <h1 class="modal-title fs-5" id="modalDepressaoLabel">Depressão</h1>
+				  <h1 class="modal-title fs-5" id="modalTSonoLabel">Transtorno do Sono</h1>
 				  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-					<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+					<p class="lead">São alterações que afetam a capacidade de <strong><me>dormir adequadamente</me></strong> ou causam sonolência durante o dia. Veja abaixo alguns distúrbios do sono mais comuns. <strong>Insônia:</strong> dificuldade em iniciar o sono, manter o sono, despertares noturnos ou acordar cedo demais; <strong>Apneia do sono:</strong> Interrupção do fluxo respiratório por 10 segundos ou mais devido ao colapso das vias aéreas; <strong>Sonambulismo:</strong> Durante o sono profundo, a pessoa se levanta e realiza atividades sem estar totalmente consciente; <strong>Bruxismo:</strong> O ranger ou apertar dos dentes durante o sono pode causar desgaste dentário e desconforto; <strong>Paralisia do sono:</strong> É uma sensação de estar acordado, mas incapaz de se mover ou falar. Pode ser assustadora, mas geralmente é inofensiva. A TCC-I (TCC para insônia) é especialmente eficaz no tratamento da insônia, melhorando a higiene do sono e promovendo mudanças comportamentais positivas.</p>
 				</div>
 				<div class="modal-footer">
 				  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
@@ -259,7 +261,7 @@
 			  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+				<p class="lead">Os Transtornos Alimentares são Perturbações no comportamento alimentar que afetam a saúde física e emocional das pessoas. Esses distúrbios não se limitam apenas à alimentação, mas também estão relacionados a aspectos biológicos, psicológicos e sociais. Os principais tipos de transtornos alimentares são a <strong>Anorexia Nervosa:</strong> Medo compulsivo de ganhar peso, a <strong>Bulimia Nervosa:</strong> episódios de compulsão alimentar seguidos por comportamentos compensatórios e o <strong>Transtorno de Compulsão Alimentar Periódica:</strong> Caracteriza-se pelo consumo desmoderado de alimentos sem comportamentos compensatórios. A Terapia Cognitivo-Comportamental (TCC) visa a uma intervenção direta para superar o distúrbio de imagem corporal, diminuir práticas rígidas de dieta ou atividade física, facilitar o aumento saudável do peso e modificar crenças disfuncionais associadas à aparência, peso e alimentação.</p>
 			</div>
 			<div class="modal-footer">
 			  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
@@ -291,7 +293,7 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<p class="lead">Lorem ipsum dolor sit amet Neque porro quisquam est qui dolorem Lorem int ipsum dolor sit amet when an unknown printer took a galley of type. Vivamus id tempor felis. Cras sagittis mi sit amet malesuada mollis. Mauris porroinit consectetur cursus tortor vel interdum.</p>
+				<p class="lead">O <strong>Transtorno Obsessivo-Compulsivo (TOC)</strong> é um distúrbio psicológico caracterizado pela presença de <strong>obsessões</strong> (pensamentos indesejados e persistentes) e <strong>compulsões</strong> (comportamentos repetitivos). O tratamento do TOC pode ser realizado de maneira eficaz por meio da <strong>Terapia Cognitivo-Comportamental (TCC)</strong>, que é uma abordagem terapêutica comprovada. Durante a TCC, o paciente aprende a identificar e modificar padrões de pensamento disfuncionais e a desenvolver estratégias para lidar com as obsessões e compulsões.</p>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
