--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,10 +51,11 @@ p, h4, button, span{
     font-size: .90rem;
     margin:auto;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+    padding: 0;
   }
 
   .reduzir img{
-    width: 4.5rem;
+    width: 6rem;
     padding-left: 30%;
     -webkit-transition: all 0.4s ease;
     transition: all 0.4s ease;
@@ -322,4 +323,22 @@ background-image: url('imagens kl/layout_kl2.png');
   transition: 0.6s;
   filter: brightness(140%)
 
+}
+
+/* COOKIES */
+.cookies-content {
+  opacity: 0;
+  transform: translateY(1rem);
+  animation: slideUp 0.5s forwards;
+}
+
+@keyframes slideUp {
+  to {
+    transform: initial;
+    opacity: initial;
+  }
+}
+
+.cookies-pref label {
+  margin-right: 1rem;
 }
