--- a/views/header.ejs
+++ b/views/header.ejs
@@ -25,18 +25,66 @@
 </head>
 <body>
   <!-- btn whatsapp-->
-  <!-- <div class=""> -->
-    <a id="btn-whats" href="https://wa.me/+14402431094" target="_blank" class="position-fixed bottom-0 end-0 m-3 m-lg-5 pulse-brilho" style="z-index: 2;">
-        <img src="./images/logo-whatsapp.png" class="btn-modal-trat" width="70px">
-                <!-- <div class="lc-block">
-                    <div editable="rich">
-
-                        <p>WhatsApp</p>
-
-                    </div>
-                </div> -->
+    <a id="btn-whats" href="https://wa.me/+14402431094" target="_blank" class="position-fixed bottom-0 end-0 m-3 m-lg-5 pulse-brilho" style="z-index: 2;"> 
+      <img src="./images/whatsapp.svg" class="btn-modal-trat" width="70px">
+               
     </a>
-  <!-- </div> -->
+  <!-- end btn whatsapp -->
+
+
+  <!-- politica de cookies -->
+
+<!-- Button trigger modal -->
+  <div id="cookies-container" class="container p-0 position-fixed w-50 left-0 bottom-0" style="z-index: 1000;" data-anima="baixo">
+      <div class="row alert p-3 text-white" style="background-color: #A99382;">
+        
+        <div class="col-xs-12 col-lg-7 align-items-center">
+          <small class="text-white m-0">Este site armazena dados como cookies para habilitar funcionalidades essenciais. Entenda mais através de nossa <a class="alert-link text-decoration-underline" href="/privacidade">Política de Privacidade</a>
+          </small>
+        </div>
+                     
+        <div class="col-xs-12 col-lg-5 mt-2 d-flex flex-column justify-content-around">
+          <button class="btn btn-primary mb-1 cookies-save">Aceitar e Fechar</button>
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#cookiesPreference">Preferências</button>
+        </div>
+
+    </div>
+  </div>
+
+<!-- Modal -->
+<div class="modal fade" id="cookiesPreference" tabindex="-1" aria-labelledby="cookiesPreferenceLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="cookiesPreferenceLabel">Permito o uso de cookies para:</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      
+      <div class="modal-body">
+          <div class="cookies-pref">
+            <label class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked data-function="analytics"> Estatísticas<br></label>
+              <small>Os cookies de estatísticas, analisam as interações dos visitantes para criar relatórios detalhados de comportamento, de maneira anônima.</small>
+            <hr>
+            <label class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked data-function="marketing"> Publicidade</label>
+              <small>Esses cookies são usados para rastrear a eficácia da publicidade, fornecer um serviço mais relevante e anúncios melhores para atender aos seus interesses.</small></label>
+            <!-- <hr>
+            <label class="p-2"><input type="checkbox" checked data-function="funcionais"> Funcionais<br>
+              <small>Esses cookies coletam dados para lembrar as escolhas que os usuários fazem e para melhorar e proporcionar uma experiência mais personalizada.</small></label> -->
+          </div>
+      </div>
+      
+      <div class="modal-footer">
+        <button class="btn btn-primary cookies-save" data-bs-dismiss="modal">Salvar e Continuar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="./js/cookies.js"></script>
+<!-- end política de cookies -->
 
   <div class="hero_area">
 
@@ -62,16 +110,8 @@
               <li class="nav-item">
                 <a class="nav-link" id="sobre" href="/sobre">Sobre</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="tratamentos" href="" role="button" data-bs-toggle="dropdown" aria-expanded="true">
-                  Tratamentos
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/tratamentos" id="depressao">Depressão</a></li>
-                  <li><a class="dropdown-item" href="/tratamentos" id="ansiedade">Ansiedade</a></li>
-                  <li><a class="dropdown-item" href="/tratamentos" id="casal">Terapia de Casal</a></li>
-                  <li><a class="dropdown-item" href="/tratamentos" id="avaliacao">Avaliação Psicológica</a></li>
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link" id="tratamentos" href="/tratamentos">Tratamentos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="contato" href="/contato">Contato</a>
