--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -4,10 +4,11 @@
       <!-- hero section -->
 	  <div class="container col-xxl-8 px-5 pb-5 pt-5 mt-5">
         <div class="row flex-lg-row-reverse align-items-top justify-content-end g-0 py-1">
-          <div class="col-10 col-sm-8 col-lg-6 my-2" data-anima="direita">
-            <img src="./images/monica_sem_fundo_2.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
-          </div>
-          <div class="col-lg-6 my-3  pt-lg-4" data-anima="esquerda">
+			<div class="col-10 col-sm-8 col-lg-5 my-2" data-anima="direita">
+				<img src="./images/monica_sem_fundo_2.png" class="d-block img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
+			  </div>
+			  <div class="col-lg-6 my-3 pt-lg-5" data-anima="esquerda">
+	
             
             <img src="./images/logo/logo_nome.png" class="d-block mx-lg-auto img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
             <!-- <h4>
