Atualizações de Layout e Informações

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -22,14 +22,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Martel+Sans:wght@600&display=swap" rel="stylesheet">
+    <script src="./js/preload.js"></script>
 </head>
-<body>
-  <!-- btn whatsapp-->
-    <a id="btn-whats" href="https://wa.me/+14402431094" target="_blank" class="position-fixed bottom-0 end-0 m-3 m-lg-5 pulse-brilho" style="z-index: 2;"> 
-      <img src="./images/whatsapp.svg" class="btn-modal-trat" width="70px">
-               
-    </a>
-  <!-- end btn whatsapp -->
+
+
+
+
+<body onload="preload()">
+<!-- preload -->
+  <!-- <div id="preload" class="position-absolute w-100 h-100 justify-content-center align-items-center" style="background-color: #FFF3E8; display: flex">
+    <div><img src="./images/spin-preload.svg" alt="spin" width="80px"></div>
+  </div> -->
+<!-- conteúdo do body -->
+<!-- <div id="content" style="display: none;"> -->
 
 
   <!-- politica de cookies -->
