--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -21,11 +21,8 @@
               Me conheça um pouco mais
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-center">
-              <button type="button" class="btn-lg px-4 me-md-2 botao-dourado w-auto" style="background-color:#000"::before>
-                <span>
-                  <a id="btnMinhaHistoria" href="" style="color: #b4882f; ">Minha História</a>
-                </span>
-               </button>
+				<a id="btnMinhaHistoria" class="botao-dourado px-4 mt-3 w-auto pulse-brilho" href="" id="btnBemVindo" role="button"><span>Minha História</span></a>
+
             </div>
           </div>
         </div>
@@ -33,6 +30,13 @@
       <!-- end hero section -->
 
   </div>
+
+<!-- btn whatsapp-->
+    <a id="btn-whats" href="http://wa.me/5521992641050?text=Olá%20Mônica,%20vim%20através%20do%20site.%20Gostaria%20de%20agendar%20uma%20consulta,%20por%20favor." target="_blank" class="position-fixed bottom-0 end-0 m-3 m-lg-5 pulse-brilho" style="z-index: 2;"> 
+		<img src="./images/whatsapp.svg" class="btn-modal-trat rise-shake" width="70px">
+				 
+	  </a>
+<!-- end btn whatsapp -->
 
 
 <main style="overflow-x: hidden; overflow-y: hidden">
@@ -51,7 +55,7 @@
 			<div class="lc-block">
 				<div editable="rich">
 
-					<p class="lead"><strong>A minha jornada de professora a psicóloga.&nbsp;</strong></p>
+					<p class="fs-5 text-center"><strong>Uma jornada de professora a psicóloga.&nbsp;</strong></p>
 
 
 				</div>
@@ -69,7 +73,7 @@
 			<div class="lc-block">
 				<div editable="rich">
 
-					<p><em>Com tantas mudanças, eu me senti perdida, e procurei a terapia. <strong>me ajudou a me conhecer melhor, a superar os meus traumas, e a encontrar um novo sentido para a vida.</strong> Ela me fez lembrar do meu sonho de infância, de ser professora, mas de uma forma diferente. <strong>Percebi que eu queria ensinar as pessoas a se amarem, a se cuidarem, a se realizarem.</strong> Entendi que eu queria ser psicóloga.</em></p>
+					<p>Com tantas mudanças, eu me senti perdida, e procurei a terapia. <strong>me ajudou a me conhecer melhor, a superar os meus traumas, e a encontrar um novo sentido para a vida.</strong> Ela me fez lembrar do meu sonho de infância, de ser professora, mas de uma forma diferente. <strong>Percebi que eu queria ensinar as pessoas a se amarem, a se cuidarem, a se realizarem.</strong> Entendi que eu queria ser psicóloga.</p>
 
 				</div>
 			</div>
@@ -77,7 +81,7 @@
 			<div class="lc-block">
 				<div editable="rich">
 
-					<p>Eu fiz outra faculdade, de Psicologia, e me apaixonei pela profissão. Me especializei em Terapia Cognitivo-Comportamental, e comecei a atuar em consultório e principalmente online por ser mais acessível e gerar os mesmos resultados, atendendo jovens, adultos e idosos. Também criei um perfil no Instagram, onde eu compartilho conteúdos sobre psicologia e saúde mental.</p>
+					<p>Eu fiz outra faculdade, de Psicologia, e me <strong>apaixonei pela profissão</strong>. Me especializei em <strong>Terapia Cognitivo-Comportamental</strong>, e comecei a atuar em consultório e principalmente online por ser mais acessível e gerar os <strong>mesmos resultados</strong>, atendendo jovens, adultos e idosos. Também criei um perfil no Instagram, onde eu compartilho conteúdos sobre psicologia e <strong>saúde mental.</strong></p>
 
 				</div>
 			</div>
@@ -85,7 +89,7 @@
 			<div class="lc-block">
 				<div editable="rich">
 
-					<p>Hoje, eu sou feliz, realizada e grata. Eu sou a Psicóloga Mônica, e <strong>tenho o prazer de ensinar e aprender com as pessoas que passam pelo meu caminho.</strong> Eu tenho o orgulho de fazer parte dessa profissão tão nobre e tão necessária. Eu tenho a esperança de contribuir para um mundo melhor, mais humano, e mais feliz.</p>
+					<p>Hoje, eu sou <strong>feliz, realizada e grata</strong>. Sou a Psicóloga Mônica, e tenho o prazer de <strong>ensinar e aprender</strong> com as pessoas que passam pelo meu caminho.</strong> Eu tenho o orgulho de fazer parte dessa profissão tão nobre e <strong>tão necessária</strong>. Eu tenho a esperança de contribuir para um mundo melhor, mais humano, e mais feliz.</p>
 
 				</div>
 			</div>
@@ -141,12 +145,8 @@
 <!-- End Curriculo -->
 
 <div class="container d-grid gap-2 d-md-flex justify-content-center mb-5" data-anima="baixo">
-    <button type="button" class="btn-lg px-4 me-md-2 botao-dourado w-auto" style="background-color:#000"::before>
-      <span>
-        <a calss="pulse-brilho" href="/tratamentos" style="color: #b4882f; ">Tratamentos</a>
-      </span>
-     </button>
-  </div>
+	<a class="botao-dourado px-4 mt-3 w-auto pulse-brilho" href="/tratamentos"role="button"><span>Tratamentos</span></a>       
+</div>
 
 </main>
 <!-- footer -->
