--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,5 @@
 
-*{
-  box-sizing: border-box;
-}
+/***** CORES E FONTES *****/
 h1,
 h2,
 h3,
@@ -15,73 +13,17 @@ hr,
  text-decoration: none;
 } 
 
-
 p, h4, button, span{
     color: #A99382;
-    font-family: 'Open Sans';
-    
+    font-family: 'Open Sans'; 
 }
 
 .navbar-nav .nav-link.active{
   color: #a3720f;
 }
 
-.navbar {
-
-    z-index:3;
-    top: 0;
-    height: 100px;
-    width: 100vw;
-    /* background-color: rgba(0, 255, 0, 0.5); */
-    display: table;
-    table-layout: fixed;
-    -webkit-transition: all 0.4s ease;
-    transition: all 0.4s ease;
-    position: fixed;
-    /* font-size: 0.5rem; */
-  }
-  
-  .reduzir {
-    -webkit-transition: all 0.4s ease;
-    transition: all 0.4s ease;
-    background-color: rgba(255, 255, 255, 0.9);
-    visibility: visible;
-    height: 40px !important;
-    /* transform: scale(.8); */
-    font-size: .90rem;
-    margin:auto;
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
-    padding: 0;
-  }
-
-  .reduzir img{
-    width: 6rem;
-    padding-left: 30%;
-    -webkit-transition: all 0.4s ease;
-    transition: all 0.4s ease;
-  }
-
-  .navbar img{
-    -webkit-transition: all 0.7s ease;
-    transition: all 0.7s ease;
-  }
-
-  .show{
-    background-color: rgba(255, 255, 255, 0.9);
-  }
-  
-  nav .show, 
-  nav .collapsing{
-    text-align: center;
-    padding-top: 2rem;
-    background-color: rgba(255, 255, 255, 0);
-  }
-
-
-  
-
 /* Cor de fundo do autocomplete INPUT E TEXTAREA */
-input:-webkit-autofill,textarea {
+input:-webkit-autofill,textarea,input:focus {
   filter: saturate(1) hue-rotate(200deg);
   -webkit-text-fill-color: #6c757d;
 }
@@ -103,73 +45,169 @@ input:-webkit-autofill,textarea {
   --bs-btn-disabled-border-color: #d1c5bd;
 }
 
+
+
+/*****  NAVBAR  *****/
+.navbar {
+  z-index:3;
+  top: 0;
+  height: 100px;
+  width: 100vw;
+  display: table;
+  table-layout: fixed;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  position: fixed;
+}
+  
+.reduzir {
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  background-color: #fff3e8f5;
+  visibility: visible;
+  height: 40px !important;
+  font-size: .90rem;
+  margin:auto;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+  padding: 0;
+}
+
+.reduzir img{
+  width: 6rem;
+  padding-left: 30%;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.navbar img{
+  -webkit-transition: all 0.7s ease;
+  transition: all 0.7s ease;
+}
+
+nav.show{
+  background-color: rgba(255, 255, 255, 0.9);
+  text-align: center;
+  padding-top: 1rem
+}
+
+.navbar-collapse ul{
+  padding: 1.5rem;
+}
+  
+nav .collapsing{
+  text-align: center;
+  /* padding: 1.5rem 0; */
+  background-color: rgba(255, 255, 255, 0);
+}
+
+
+
+/******  MENU HAMBURGUER ******/
+.navbar-toggler{
+  border: none;
+  padding: .5rem;
+}
+.navbar-toggler:focus{
+  box-shadow: 0 0 0 0;
+}
+
+.navbar-toggler-icon{
+  background-image: none;
+  height: auto;
+  border-top: 2px solid;
+  display: block;
+  transition: .5s;
+}
+
+.navbar-toggler-icon::after, .navbar-toggler-icon::before{
+  content: '';
+  display: block;
+  border-top: 2px solid;
+  height: 2px;
+  margin-top: 5px;
+  margin-left: auto;
+  position: relative;
+  transition: .8s ;
+}
+
+nav.show .navbar-toggler-icon{
+  border-top-color: transparent;
+  border: .1rem solid;
+  width: 2rem;
+  height: 2rem;
+  padding: 3px;
+  padding-top: 9px;
+  border-radius: 50%;
+}
+
+nav.show .navbar-toggler-icon::before{
+  transform: rotate(225deg);
+}
+nav.show .navbar-toggler-icon::after{
+  transform: rotate(-225deg);
+  top: -7px;
+}
+
+
+
+
+/****** HOME ******/
+#main{
+  overflow-x: hidden;
+  /* overflow-y: hidden; */
+}
+
 .hero_area {
-    position: relative;
-    top: 0px;
-    min-height: auto;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    /* box-shadow: 20px 0px 30px rgba(85, 85, 85, 0.5); */
-  }
-  
-  .hero_area .hero_bg_box {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
-    overflow: hidden;
-    z-index: -1;
-    background-size: cover;
-    /* background-color: #FFF3E8; */
-  }
-  @media (width <= 575px) {
-    .bg_img_box{
-      background-image: url("../images/fundo_hero__2_mobile.png")!important;
-      background-size: cover;
-          background-position: center;
+  position: relative;
+  top: 0px;
+  min-height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
 
-    }
+.hero_area .hero_bg_box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  overflow: hidden;
+  z-index: -1;
+  background-size: cover;
+}
 
-    .parallax{
-      transform: scale(1);
-    }
-  }
+.bg_img_box{
+  background-image: url("../images/fundo_hero__2.png");
+  background-position: bottom;
+  background-size: cover;    
+}
 
-  .bg_img_box{
-    background-image: url("../images/fundo_hero__2.png");
-    background-position: bottom;
-    background-size: cover;    
-  }
+.hero_area .hero_bg_box .bg_img_box {
+  min-width: 100%;
+  min-height: 100%;
+}
 
-  /* #61302B    #FFF3E8    #A99382 */
-  .hero_area .hero_bg_box .bg_img_box {
-    min-width: 100%;
-    min-height: 100%;
-  }
-  
-  .hero_area .hero_bg_box img {
-    min-width: 100%;
-  }
+.hero_area .hero_bg_box img {
+  min-width: 100%;
+}
 
-  nav img{
-    width: 120px;
-  }
-
+nav img{
+  width: 120px;
+}
 
 .card{
     border: none;
@@ -177,13 +215,26 @@ input:-webkit-autofill,textarea {
     
 }
 
-.sombra_hover:hover{
-  background-color: rgba(0, 0, 0, 1);
-  /* box-shadow: 0px 0px 20px; */
+@media (width <= 575px) {
+  .bg_img_box{
+    background-image: url("../images/fundo_hero__2_mobile.png")!important;
+    background-size: cover;
+    background-position: center;
+  }
+
+  .parallax{
+    transform: scale(1);
+  }
 }
 
+/*  END HOME  */
 
-/* ANIMAÇÕES */
+
+
+
+
+/***** ANIMAÇÕES *****/
+
 [data-anima]{
 	opacity: 0;
 	transition: 2s;
@@ -205,51 +256,70 @@ input:-webkit-autofill,textarea {
 	transform: translate3d(0,0,0);
 }
 
-/* animação pulse com brilho */
+
+/* movimentos no modal */
+.btn-modal-trat{
+  transition: 0.6s;
+}
+
+.btn-modal-trat:hover{
+  transform: translateZ(0);
+  backface-visibility: hidden;
+  transform:scale(1.04);
+  filter: brightness(130%)
+}
+
+.btn-card{
+  transition: 0.3s;
+  backface-visibility: hidden;
+  -webkit-font-smoothing: subpixel-antialiased;
+}
+
+.btn-card:hover{
+  transform: translate3d(0ch, -0.1in, 2em);  
+}
+
+
+/* animação pulse */
 .pulse-brilho{
-  animation: pulse .8s infinite;
-  margin: 0 auto;
-  display: table;
-  margin-top: 50px;
+  animation: pulse-brilho .7s infinite;
   animation-direction: alternate;
-  -webkit-animation-name: pulse-brilho;
-  animation-name: pulse-brilho;
+  backface-visibility: hidden;
 }
 
 @-webkit-keyframes pulse-brilho {
-  0% {
-    transform: translateZ(0);
-    backface-visibility: hidden;
-    -webkit-transform: scale(1);
-    /* -webkit-filter: brightness(100%); */
-  }
-  100% {
-    transform: translateZ(0);
-    backface-visibility: hidden;
-    -webkit-transform: scale(1.07);
-    /* -webkit-filter: brightness(110%); */
-  }
+  0% { -webkit-transform: scale(1) }
+  100% { -webkit-transform: scale(1.07) }
 }
 
 @keyframes pulse-brilho {
-  0% {
-    transform: translateZ(0);
-    backface-visibility: hidden;
-    transform: scale(1);
-    /* filter: brightness(100%); */
-  }
-  100% {
-    
-    transform: scale(1.07);
-    /* filter: brightness(110%); */
-  }
+  0% { transform: scale(1) translateZ(0) }
+  100% { transform: scale(1.05); backface-visibility: hidden }
+}
 
+/* Botão do WhatsApp */
+.rise-shake{
+  animation: jump-shaking 7s infinite;
+}
+
+@keyframes jump-shaking {
+  0% { transform: translateX(0) }
+  80% { transform: translateY(0) }
+
+  85% { transform: translateY(-15px) }
+  86% { transform: translateY(-15px) rotate(8deg) }
+  87% { transform: translateY(-15px) rotate(-8deg) }
+  88% { transform: translateY(-15px) rotate(8deg) }
+  89% { transform: translateY(-15px) rotate(-8deg) }
+  90% { transform: translateY(-15px) rotate(0deg) }
+
+  100% { transform: translateY(0) rotate(0) }
 }
 
 
 
 
-/* PARALLAX */
+/*****   PARALLAX   *****/
 .parallax{
   background-attachment: fixed; /* anexo da imagem - não deixa a imagem rolar junto com a section */
   background-size: cover; /* cobre toda a area da section */
@@ -259,20 +329,18 @@ input:-webkit-autofill,textarea {
   -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-  }
-  .p1{
+}
+
+.p1{
   background-image: url('../images/conversando_com_terapeuta.jpg');
 }
-.p2{
-background-image: url('imagens kl/layout_kl2.png');
-}
-.transparencia{
-  background-color: rgba(255, 255, 255, 0.7);
-}
 
 
 
-/*   BOTÃO DOURADO    */
+
+
+/*****    BOTÃO DOURADO   *****/
+
 .botao-dourado {
   width: 150px;
   height: 45px;
@@ -290,6 +358,7 @@ background-image: url('imagens kl/layout_kl2.png');
   overflow: hidden;
   text-decoration:none; 
 }
+
 .botao-dourado::before {
   position: absolute;
   content: "";
@@ -304,26 +373,28 @@ background-image: url('imagens kl/layout_kl2.png');
   background-color: white;
   background-size: 200%;
 }
-.botao-dourado span    { color: #a3720f; text-decoration: none; z-index: 1; }
+
+.botao-dourado span { 
+  color: #a3720f; 
+  text-decoration: none; 
+  z-index: 1; 
+}
+
 .botao-dourado:hover {
   background-position: right;
   transition-duration: 0.3s;
   transform:scale(1.05);
 }
+
 .botao-dourado:hover::before {
   background-position: right;
   transition-duration: 1s;
 }
 
-.btn-modal-trat:hover{
 
-  transform: translateZ(0);
-  backface-visibility: hidden;
-  transform:scale(1.04);
-  transition: 0.6s;
-  filter: brightness(140%)
 
-}
+
+
 
 /* COOKIES */
 .cookies-content {
