foto dahero atualizada

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
       
       <!-- hero section -->
       <div class="container col-xxl-8 px-5 py-5 mt-5">
-        <div class="row flex-lg-row-reverse align-items-top justify-content-end g-0 py-1">
+        <div class="row flex-lg-row-reverse align-items-top justify-content-center g-0 py-1">
           <div class="col-10 col-sm-8 col-lg-5 my-2" data-anima="direita">
             <img src="./images/monica_sem_fundo_2.png" class="d-block img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
           </div>
