--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -3,7 +3,7 @@
       
       <!-- hero section -->
 	  <div class="container col-xxl-8 px-5 pb-5 pt-5 mt-5">
-        <div class="row flex-lg-row-reverse align-items-top justify-content-end g-0 py-1">
+        <div class="row flex-lg-row-reverse align-items-top justify-content-center g-0 py-1">
 			<div class="col-10 col-sm-8 col-lg-5 my-2" data-anima="direita">
 				<img src="./images/monica_sem_fundo_2.png" class="d-block img-fluid" alt="Monica Costa" width="" height="" loading="lazy">
 			  </div>
@@ -64,7 +64,7 @@
 			<div class="lc-block">
 				<div editable="rich">
 
-					<p>Eu sempre quis ser professora, mas a vida me levou para a Administração. Trabalhei nessa área por dez anos, mas nunca deixei de gostar de ouvir e ajudar as pessoas. <strong>Eu também passei por momentos muito difíceis</strong>, como perder o meu primeiro filho, e ter uma síndrome que afetava a minha gravidez. Mas eu não perdi a fé, e consegui ter mais dois filhos, que são a minha alegria.</p>
+					<p class="lead">Eu sempre quis ser professora, mas a vida me levou para a Administração. Trabalhei nessa área por dez anos, mas nunca deixei de gostar de ouvir e ajudar as pessoas. <strong>Eu também passei por momentos muito difíceis</strong>, como perder o meu primeiro filho, e ter uma síndrome que afetava a minha gravidez. Mas eu não perdi a fé, e consegui ter mais dois filhos, que são a minha alegria.</p>
 
 
 				</div>
@@ -73,7 +73,7 @@
 			<div class="lc-block">
 				<div editable="rich">
 
-					<p>Com tantas mudanças, eu me senti perdida, e procurei a terapia. <strong>me ajudou a me conhecer melhor, a superar os meus traumas, e a encontrar um novo sentido para a vida.</strong> Ela me fez lembrar do meu sonho de infância, de ser professora, mas de uma forma diferente. <strong>Percebi que eu queria ensinar as pessoas a se amarem, a se cuidarem, a se realizarem.</strong> Entendi que eu queria ser psicóloga.</p>
+					<p class="lead">Com tantas mudanças, eu me senti perdida, e procurei a terapia. Ela me ajudou a <strong>me conhecer melhor, a superar os meus traumas, e a encontrar um novo sentido para a vida.</strong> Ela me fez lembrar do meu sonho de infância, de ser professora, mas de uma forma diferente<strong>. Percebi que eu queria ensinar as pessoas a se amarem, a se cuidarem, a se realizarem.</strong> Entendi que eu queria ser psicóloga.</p>
 
 				</div>
 			</div>
@@ -81,7 +81,7 @@
 			<div class="lc-block">
 				<div editable="rich">
 
-					<p>Eu fiz outra faculdade, de Psicologia, e me <strong>apaixonei pela profissão</strong>. Me especializei em <strong>Terapia Cognitivo-Comportamental</strong>, e comecei a atuar em consultório e principalmente online por ser mais acessível e gerar os <strong>mesmos resultados</strong>, atendendo jovens, adultos e idosos. Também criei um perfil no Instagram, onde eu compartilho conteúdos sobre psicologia e <strong>saúde mental.</strong></p>
+					<p class="lead">Eu fiz outra faculdade, de Psicologia, e me <strong>apaixonei pela profissão</strong>. Me especializei em <strong>Terapia Cognitivo-Comportamental</strong>, comecei a atuar em consultório e principalmente online por ser mais acessível e gerar os <strong>mesmos resultados</strong>, atendendo jovens, adultos e idosos. Também criei um perfil no Instagram, onde eu compartilho conteúdos sobre psicologia e <strong>saúde mental.</strong></p>
 
 				</div>
 			</div>
@@ -89,7 +89,7 @@
 			<div class="lc-block">
 				<div editable="rich">
 
-					<p>Hoje, eu sou <strong>feliz, realizada e grata</strong>. Sou a Psicóloga Mônica, e tenho o prazer de <strong>ensinar e aprender</strong> com as pessoas que passam pelo meu caminho.</strong> Eu tenho o orgulho de fazer parte dessa profissão tão nobre e <strong>tão necessária</strong>. Eu tenho a esperança de contribuir para um mundo melhor, mais humano, e mais feliz.</p>
+					<p class="lead">Hoje, eu sou <strong>feliz, realizada e grata</strong>. Sou a Psicóloga Mônica, e tenho o prazer de <strong>ensinar e aprender</strong> com as pessoas que passam pelo meu caminho.</strong> Eu tenho o orgulho de fazer parte dessa profissão tão nobre e <strong>tão necessária</strong>. Eu tenho a esperança de contribuir para um mundo melhor, <strong>mais humano, e mais feliz</strong>.</p>
 
 				</div>
 			</div>
