--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,6 +92,7 @@ nav.show{
 
 .navbar-collapse ul{
   padding: 1.5rem;
+  font-size: 1.2rem;
 }
   
 nav .collapsing{
@@ -306,12 +307,12 @@ nav img{
   0% { transform: translateX(0) }
   80% { transform: translateY(0) }
 
-  85% { transform: translateY(-15px) }
-  86% { transform: translateY(-15px) rotate(8deg) }
-  87% { transform: translateY(-15px) rotate(-8deg) }
-  88% { transform: translateY(-15px) rotate(8deg) }
-  89% { transform: translateY(-15px) rotate(-8deg) }
-  90% { transform: translateY(-15px) rotate(0deg) }
+  85% { transform: translateY(-20px) }
+  86% { transform: translateY(-20px) rotate(8deg) }
+  87% { transform: translateY(-20px) rotate(-8deg) }
+  88% { transform: translateY(-20px) rotate(8deg) }
+  89% { transform: translateY(-20px) rotate(-8deg) }
+  90% { transform: translateY(-20px) rotate(0deg) }
 
   100% { transform: translateY(0) rotate(0) }
 }
